# storage_encoded

./: README.md
example/: Forc.toml
example/src/: main.sw
lib/: Forc.toml  README.md
lib-rs/: Cargo.toml
lib-rs/src/: contract_state_loader.rs  lib.rs
lib/src/: main.sw
