[package]
name = "storage_encoded"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
fuel-core-client = "0.46.0"
fuel-types = "0.62.0"
fuels = "0.74.0"
local-tx-executor = { git = "https://github.com/FuelLabs/fuel-utils.git", rev = "a6eb5890e43479d3fb57006187fbec789addd129" }
sha2 = "0.10.9"
tokio = "1.47.1"
